--- a/style/blocks/_media-and-text.scss
+++ b/style/blocks/_media-and-text.scss
@@ -1,7 +1,6 @@
 .wp-block-media-text {
 	align-items: start;
 	clear: both;
-	padding-top: 20px;
 	padding-top: 50px;
 	padding-bottom: 50px;
 
@@ -20,6 +19,11 @@
 			@include clearfix();
 			@include clearfix-after();
 		}
+	}
+
+	@media screen and (min-width: breakpoint('tablet-landscape')) {
+		padding-left: $padding__content-tablet;
+		padding-right: $padding__content-tablet;
 	}
 
 	@media screen and (min-width: 600px) {
@@ -86,62 +90,19 @@
 			padding-right: 8%;
 		}
 	}
-}
 
-.wp-block-media-text {
+	@media screen and (min-width: $size__page-width + $padding__content-desktop*2) {
+		padding-left: calc((100vw - #{$size__content-width}) /2);
+		padding-right: calc((100vw - #{$size__content-width}) /2);
 
-	&.has-image-background {
-		padding-top: 50px;
-		padding-bottom: 50px;
-		display: block;
-		position: relative;
-		padding-left: $padding__content-mobile;
-		padding-right: $padding__content-mobile;
-
-		.wp-block-media-text__media,
-		.wp-block-media-text__content {
-			display: block;
+		&.alignwide {
+			padding-left: calc((100vw - #{$size__page-width}) /2);
+			padding-right: calc((100vw - #{$size__page-width}) /2);
 		}
 
-		.wp-block-media-text__content {
-			position: relative;
-			z-index: 1;
-			padding: 0;
-		}
-
-		@media screen and (min-width: 600px) {
-
-			.wp-block-media-text__media {
-				position: absolute;
-				top: 0;
-				bottom: 0;
-				left: 0;
-				right: 0;
-
-				img {
-					height: 100%;
-					width: 100%;
-					object-fit: cover;
-				}
-			}
-
-			.wp-block-media-text__content {
-				background: #fff;
-				border-radius: 8px;
-				box-shadow: 0 0 3px rgba(0,0,0,.2);
-				width: 50%;
-				padding: 20px;
-			}
-
-			&.is-style-full {
-
-				.wp-block-media-text__content {
-					background: none;
-					border-radius: 0;
-					box-shadow: none;
-					width: 100%;
-				}
-			}
+		&.alignfull {
+			padding-left: $padding__content-tablet;
+			padding-right: $padding__content-tablet;
 		}
 	}
 }
