--- a/style/blocks/_trust.scss
+++ b/style/blocks/_trust.scss
@@ -17,15 +17,15 @@
 		box-shadow: none;
     }
     
-    @media screen and (min-width: $size__content-width) {
+    @media screen and (min-width: $size__page-width) {
 		margin-left: calc(50% - 50vw);
 		margin-right: calc(50% - 50vw);
-		padding-left: calc((100vw - #{$size__content-width}) /2 + 35px);
-		padding-right: calc((100vw - #{$size__content-width}) /2 + 35px);
+		padding-left: calc((100vw - #{$size__page-width}) /2 + 35px);
+		padding-right: calc((100vw - #{$size__page-width}) /2 + 35px);
     }
     
     @media screen and (min-width: $size__tablet-content-width) {
-        padding: 0 calc((100vw - #{$size__content-width}) /2);
+        padding: 0 calc((100vw - #{$size__page-width}) /2);
     }
 }
 
