--- a/style/layout/_full.scss
+++ b/style/layout/_full.scss
@@ -1,15 +1,15 @@
-.alignfull,
+/*.alignfull,
 .alignwide {
 
-	@media screen and (min-width: $size__content-width + $padding__content-desktop*2) {
+	@media screen and (min-width: $size__page-width + $padding__content-desktop*2) {
 		margin-left: calc(50% - 50vw);
 		margin-right: calc(50% - 50vw);
-		padding-left: calc((100vw - #{$size__content-width}) /2);
-		padding-right: calc((100vw - #{$size__content-width}) /2);
+		padding-left: calc((100vw - #{$size__page-width}) /2);
+		padding-right: calc((100vw - #{$size__page-width}) /2);
 	}
-}
+}*/
 
-.wp-block-group {
+/*.wp-block-group {
 	
 	&.alignfull,
 	&.alignwide {
@@ -21,14 +21,14 @@
 		padding-right: $padding__content-tablet;
 	}
 	
-	@media screen and (min-width: $size__content-width + $padding__content-desktop*2) {
-			padding-left: calc((100vw - #{$size__content-width}) /2);
-			padding-right: calc((100vw - #{$size__content-width}) /2);
+	@media screen and (min-width: $size__page-width + $padding__content-desktop*2) {
+			padding-left: calc((100vw - #{$size__page-width}) /2);
+			padding-right: calc((100vw - #{$size__page-width}) /2);
 		}
 	}
-}
+}*/
 
-.is-style-download.has-media-on-the-right.alignfull,
+/*.is-style-download.has-media-on-the-right.alignfull,
 .wp-block-columns.is-style-offer.alignfull {
 
 	@media screen and (min-width: breakpoint('desktop')) {
@@ -75,4 +75,4 @@
 			background: $color__background-light;
 		}
 	}
-}
+}*/
